--- a/foyer.html
+++ b/foyer.html
@@ -41,7 +41,7 @@
     <hr>
   </section>
 
-  <section id="lefoyer" class="container-fluid">
+  <section id="lefoyer" class="container-fluid p-0 m-0">
     <div class="row mb-3">
       <div class="col-12">
         <p class="text-center">Définition (Larousse):
@@ -74,10 +74,10 @@
         </div>
       </div>
       <div class="col-lg-6 px-0">
-        <img class="img-fluid" src="./ImagesSophie/IMG_0206.jpg" alt="vestibule" oncontextmenu="return false;">
+        <img class="img-fluid" src="./ImagesSophie/IMG_0282.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
     </div>
-    <div class="row foyerText foyerGrid pt-3 pb-0">
+    <div class="row foyerText foyerGrid px-4  m-0 py-0">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -136,7 +136,7 @@
         </p>
       </div>
     </div>
-    <div class="row foyerGrid foyerText pt-3 pb-0 justify-content-end">
+    <div class="row foyerText foyerGrid px-4  m-0 pt-0 pb-5 justify-content-end">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -189,7 +189,6 @@
                 même j’en eusse eu la possibilité, car cela restait malgré tout un Foyer
                 construit à deux, emblématique qui plus est d’une période symbolique
                 de ma vie, et y retourner n’aurait eu aucun sens.
-
                 Bien sûr, rétrospectivement, je reste consciente que ma vision
                 de cette Maison Natale s’est vue complètement sublimée, idéalisée par
                 le souvenir et la nostalgie. Elle incarnait parfaitement cette maison du
@@ -235,6 +234,192 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="row foyerGrid">
+      <div class="col-lg-6 foyerText foyerIntro">
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-10">
+            <h1 class"display-5">2. Répulsion </h1>
+            <br>
+            <p class="text-justify">
+              <br>
+              « L’introuvable maison où respire cette fleur de laves,
+              <br>
+              où naissent les orages, l’exténuant bonheur,
+              <br>
+              quand m’arrêterai-je de la chercher ?⁸ »
+            </p>
+          </div>
+          <div class="col-1"></div>
+        </div>
+      </div>
+      <div class="col-lg-6 px-0">
+        <img class="img-fluid" src="./ImagesSophie/IMG_0066.jpg" alt="vestibule" oncontextmenu="return false;">
+      </div>
+    </div>
+    <div class="row foyerText foyerGrid px-4 m-0 pt-0 pb-5">
+      <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" href="#collapse3">Read More</a>
+            </h4>
+          </div>
+          <div id="collapse3" class="panel-collapse collapse">
+            <div class="panel-body mx-4">
+              <p class="text-justify">Le contexte tumultueux m’ayant amenée à habiter dans ce
+                nouveau lieu n’a en rien arrangé mon appréciation de ce dernier,
+                donc. Les conditions édictées par mon père, citées plus tôt, venaient
+                davantage renforcer cette sensation de perte de soi. M’installer chez
+                mes grands-parents, c’était comme passer de l’état d’émancipation à
+                l’état d’un nouvel enfermement, d’un retour dans la sphère parentale.
+                Pour me plier aux règles paternelles, je devais m’amputer d’une partie
+                essentielle de ma vie de jeune étudiante. Une des nombreuses autres
+                conditions de départ fut de n’inviter personne dans ces lieux, dans le
+                but de préserver le mobilier et les effets personnels de mes grandsparents.
+                Evidemment, j’ai enfreint chacune des règles édictées, petit à
+                petit, et celle-ci en premier.
+                Nous gardions l’espoir que ma grand-mère se rétablirait et
+                pourrait de nouveau habiter chez elle. Son décès en avril 2012 n’a
+                guère arrangé les choses ; je me retrouvais désormais au milieu de ses
+                affaires, contrainte de survivre au milieu du souvenir, lui bien vivant,
+                de la présence de mes grands-parents. Désormais, tout me rappelait leur absence. Pourtant, ce n’est pas le lieu que j’associe directement à
+                leur souvenir, bien qu’il me soit familier depuis mon enfance.
+                J’avais toujours porté un regard empreint d’une quasi-neutralité
+                envers cet appartement lyonnais. Ayant vécu dans une petite ville avec
+                mes parents, j’avais en horreur les métropoles, que j’associais à la saleté
+                et la grisaille, aussi n’ai-je placé aucun souvenir agréable, ni déplaisant,
+                de mes passages d’enfance dans leur maisonnée. Le seul souvenir
+                bouleversant que j’aurais pu y associer fut le décès de mon grand père
+                en 2004 ; cependant, je parviens à en faire complètement abstraction.
+                Il y a eu ces quelques fois, lors de mes premières années d’études sur
+                Lyon, aux alentours de 2007, où je venais régulièrement déjeuner avec
+                ma grand-mère, qui, du haut de ses quatre-vingt-quinze ans passés, me
+                cuisinait encore de temps à autre des mets succulents. Mais ces souvenirs ne furent pas assez puissants pour éclipser ceux de mon enfance ; leur appartement me semblait être alors comme
+                leur résidence secondaire, car c’est dans leur maison de campagne,
+                dans le sud de la Drôme, que j’ai davantage passé mon enfance en leur
+                compagnie. C’est là bas que je situe leur véritable présence, leur amour,
+                nos échanges et nos jeux. Aussi, j’ai remarqué, en triant les diapositives
+                de mes grands-parents, que je n’y trouvais aucune photo de moi ou
+                de ma famille dans cet appartement. Les seules fois où l’on nous voit
+                apparaitre sont lors de nos séjours dans la maison de campagne (fig. 2).
+                La neutralité que je ressentais envers l’appartement de mes grandsparents
+                s’est peu à peu muée en répulsion. J’avais le sentiment de ne pas
+                être à ma place, et tout me le rappelait, à commencer par l’absence de
+                mes aïeux, et à la fois cette présence dérangeante et palpable à laquelle
+                leurs effets personnels me ramenaient sans cesse. Je vivais au milieu de
+                symboles d’une construction de vie, construction que moi, je n’avais pas
+                le droit d’expérimenter. J’ai longtemps été incapable de vivre seule dans
+                ces lieux, et en appelait souvent à mes amis pour venir combler le vide
+                et le dégoût qu’ils m’inspiraient. Mais en vain : ma solitude était trop
+                intérieure pour être comblée. Je me sentais telle Catherine Deneuve
+                incarnant une Carol Ledoux étouffée et enserrée dans son lieu de vie⁹,
+                dont la névrose fut telle que les murs qui l’entouraient ne constituaient
+                non pas un refuge, mais une prison, voire une menace (fig. 3).
+                Sans côtoyer un désordre psychique aussi exacerbé, je ne
+                parvenais pas à me fixer au milieu de ce qui me semblait ressembler
+                de plus en plus à un musée, voire un mausolée, plutôt qu’une
+                habitation, tellement ce mobilier anachronique m’était impersonnel,
+                tellement cette condition de « ne rien toucher » m’éloignait d’une
+                possible connexion physique, d’un apport chaleureux. Pendant près
+                de quatre ans, je me suis languie de mon Foyer idéal, espérant sans
+                cesse le jour où je retournerai enfin dans un lieu dont je pourrai enfin
+                m’approprier l’espace, l’imaginant dans ses moindres détails, dessinant
+                dans mon esprit ses moindres recoins. Non pas que je fusse dans un
+                état d’accablement pendant tout ce temps, mais plutôt dans un état
+                d’incomplétude. Ce n’est que l’été dernier qu’un début d’ordre fut enfin
+                amené.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row foyerGrid">
+      <div class="col-lg-6 px-0">
+        <img class="img-fluid" src="./ImagesSophie/IMG_0018.jpg" alt="vestibule" oncontextmenu="return false;">
+      </div>
+      <div class="col-lg-6 foyerText foyerIntro">
+        <h1 class"display-4">3. L’été Vient</h1>
+        <p class="">
+          <br>
+          « J’ai fait de plus loin que moi un voyage abracadabrant
+          <br>
+          Il y a longtemps que je ne m’étais pas revu
+          <br>
+          Me voici en moi comme un homme dans une maison
+          <br>
+          Qui s’est faite en son absence
+          <br>
+          Je te salue, silence
+          <br>
+          Je ne suis pas revenu pour revenir
+          <br>
+          Je suis arrivé à ce qui commence¹⁰ »
+        </p>
+      </div>
+    </div>
+    <div class="row foyerText foyerGrid px-4  m-0 pt-0 pb-5 justify-content-end">
+      <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" href="#collapse4">Read More</a>
+            </h4>
+          </div>
+          <div id="collapse4" class="panel-collapse collapse">
+            <div class="panel-body mx-4">
+              <p class="text-justify">
+                Ma vision du foyer, du « chez-soi » s’est complètement modifiée
+                durant l’été 2015, où j’ai passé trois mois hors de mon appartement,
+                étant partie pour un stage à Montréal. Là bas, j’ai fait l’expérience de
+                loger dans trois lieux différents : auprès de ma famille côté maternel,
+                puis en colocation dans un appartement, et parfois, certains week-ends,
+                chez des amis. A ma plus grande surprise, dans chacun de ces lieux,
+                bien que n’ayant en ma possession que très peu d’effets personnels,
+                je me sentais, et j’étais chez moi, car la présence de mon entourage
+                me le faisait ressentir. « Je m’éveillais, mais c’était en voyage¹¹ ».
+                En outre, pour la première fois de ma vie, j’eus la sensation
+                que mon chez-moi s’étendait au delà des murs ; j’étais chez moi
+                au parc Laurier, au sommet du mont Royal, en déambulant rue
+                Sainte Catherine. Ce fut comme si j’avais enfin quitté une zone de onfort, comme si j’avais enfin démoli ces barrières de protection que je
+                m’étais forgées pour me protéger. C’est au final en sortant de moi-même,
+                de mes idées préconçues, que je me suis trouvée. Et en me trouvant, j’ai
+                retrouvé ma maison.
+                C’est depuis mon retour de Montréal que je considère enfin
+                l’appartement de mes grands-parents comme mon chez-moi ; j’ai
+                réalisé que, paradoxalement, j’y avais trouvé ma place une fois que je
+                me suis enfin sentie prête à le quitter. Je me suis alors complètement
+                réapproprié mon espace de vie ; j’ai fini par faire table rase des certaines
+                conditions érigées par mon père, tout en trouvant un équilibre afin de
+                le respecter lui, mon logement, et ne pas me restreindre à la fois. J’ai
+                estimé que je n’avais plus de comptes à rendre, si ce n’est d’entretenir au
+                mieux ce lieu de vie ; qu’importe les objets cassés, le parquet imprégné
+                de vin rouge après une soirée arrosée. C’est ainsi que je dois vivre, sans
+                me restreindre par la peur infantile d’être réprimandée.
+                Mon voyage m’a amené à abolir ces notions matérialistes
+                auxquelles je m’étais trop accrochée : le besoin d’avoir ses propres
+                affaires, son propre mobilier, de pouvoir personnaliser entièrement son
+                espace de vie m’apparait désormais comme superflu. Bien entendu, un
+                strict minimum reste nécessaire afin de se sentir chez soi. Pour l’heure,
+                mes livres, mes vêtements, mon chat, mes quelques effets personnels
+                présents dans l’appartement de mes grands-parents me suffisent ; car
+                c’est au delà de mes affaires que je définis mon chez-moi.
+                Le récit de mon chemin parcouru jusqu’à mon Foyer vient
+                poser les bases de ce qui va suivre : tenter de définir le plus précisément
+                possible quelle est ma conception du chez-soi.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row p-5 foyerGrid">
+      <div class="col-12">
+        <h1 class="text-center display-4">II. La Demeure</h1>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
