end foyer first draw

--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-4">
         <div class="card">
-          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0018.jpg" alt="Window reflection" oncontextmenu="return false;" />
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0355.jpg" alt="guard in a museum" oncontextmenu="return false;" />
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 mb-4">
         <div class="card">
-          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0238.jpg" alt="City reflexion" oncontextmenu="return false;" />
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0022.jpg" alt="old women smiling" oncontextmenu="return false;" />
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 mb-4">
         <div class="card">
-          <img class="card-img-top rounded img-thumbnail" src="./ImagesSophie/IMG_0282.jpg" alt="Typwriter" oncontextmenu="return false;">
+          <img class="card-img-top rounded img-thumbnail" src="./ImagesSophie/IMG_0029.jpg" alt="Man reading the newspaper smoking a pipe" oncontextmenu="return false;">
         </div>
       </div>
     </div>
