--- a/foyer.html
+++ b/foyer.html
@@ -119,10 +119,10 @@
       </div>
     </div>
     <div class="row foyerGrid">
-      <div class="col-xl-6 px-0">
+      <div class="col-xl-6 order-2 px-0">
         <img class="img-fluid" src="./ImagesSophie/IMG_0011.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
-      <div class="col-xl-6 foyerText foyerIntro">
+      <div class="col-xl-6 order-1 foyerText foyerIntro">
         <h1 class"display-4">1. Le Songe de la Maison Natale</h1>
         <p class="">
           <br>
@@ -337,10 +337,10 @@
       </div>
     </div>
     <div class="row foyerGrid">
-      <div class="col-xl-6 px-0">
+      <div class="col-xl-6 order-2 px-0">
         <img class="img-fluid" src="./ImagesSophie/IMG_0018.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
-      <div class="col-xl-6 foyerText foyerIntro">
+      <div class="col-xl-6 order-1 foyerText foyerIntro">
         <h1 class"display-4">3. L’été Vient</h1>
         <p class="">
           <br>
@@ -506,10 +506,10 @@
       </div>
     </div>
     <div class="row foyerGrid">
-      <div class="col-xl-6 px-0">
+      <div class="col-xl-6 order-2 px-0">
         <img class="img-fluid" src="./ImagesSophie/IMG_0000.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
-      <div class="col-xl-6 foyerText foyerIntro">
+      <div class="col-xl-6 order-1 foyerText foyerIntro">
         <h1 class"display-4">2. Autopoïèse</h1>
         <p class="">
           <br>
@@ -689,10 +689,10 @@
       </div>
     </div>
     <div class="row foyerGrid">
-      <div class="col-xl-6 px-0">
+      <div class="col-xl-6 order-2 px-0">
         <img class="img-fluid" src="./ImagesSophie/IMG_0155.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
-      <div class="col-xl-6 foyerText foyerIntro">
+      <div class="col-xl-6 order-1 foyerText foyerIntro">
         <h1 class"display-4">4. L’Univers</h1>
         <p class="">
           <br>
