--- a/foyer.html
+++ b/foyer.html
@@ -689,10 +689,10 @@
       </div>
     </div>
     <div class="row foyerGrid">
-      <div class="col-xl-6 order-xl-2 order-xl-1 px-0">
+      <div class="col-xl-6 order-2 order-xl-1 px-0">
         <img class="img-fluid" src="./ImagesSophie/IMG_0155.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
-      <div class="col-xl-6 order-xl-1 order-xl-2 foyerText foyerIntro">
+      <div class="col-xl-6 order-1 order-xl-2 foyerText foyerIntro">
         <h1 class"display-4">4. L’Univers</h1>
         <p class="">
           <br>
