--- a/foyer.html
+++ b/foyer.html
@@ -77,7 +77,7 @@
         <img class="img-fluid" src="./ImagesSophie/IMG_0282.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4  m-0 py-0">
+    <div class="row foyerText foyerGrid px-4  m-0 pb-0">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -136,7 +136,7 @@
         </p>
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4  m-0 pt-0 pb-5 justify-content-end">
+    <div class="row foyerText foyerGrid px-4  m-0 pt-3 pb-5 justify-content-end">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -258,7 +258,7 @@
         <img class="img-fluid" src="./ImagesSophie/IMG_0066.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4 m-0 pt-0 pb-5">
+    <div class="row foyerText foyerGrid px-4 m-0 pt-3 pb-5">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -360,7 +360,7 @@
         </p>
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4  m-0 pt-0 pb-5 justify-content-end">
+    <div class="row foyerText foyerGrid px-4  m-0 pt-3 pb-5 justify-content-end">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -445,7 +445,7 @@
         <img class="img-fluid" src="./ImagesSophie/IMG_0259.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4 m-0 pt-0 pb-5">
+    <div class="row foyerText foyerGrid px-4 m-0 pt-3 pb-5">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -523,7 +523,7 @@
         </p>
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4  m-0 pt-0 pb-5 justify-content-end">
+    <div class="row foyerText foyerGrid px-4  m-0 pt-3 pb-5 justify-content-end">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -637,7 +637,7 @@
         <img class="img-fluid" src="./ImagesSophie/IMG_0238.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4 m-0 pt-0 pb-5">
+    <div class="row foyerText foyerGrid px-4 m-0 pt-3 pb-5">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -702,7 +702,7 @@
         </p>
       </div>
     </div>
-    <div class="row foyerText foyerGrid px-4  m-0 pt-0 pb-5 justify-content-end">
+    <div class="row foyerText foyerGrid px-4  m-0 pt-3 pb-5 justify-content-end">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
