fixed le foyer icon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navLinks">
       <ul class="navbar-nav">
         <li class="nav-item mx-2">
-          <a class="navbar navTitle nav-link" href="foyer.html"><span class="fab fa-gripfire"></span>&nbsp; Le foyer</a>
+          <a class="navbar navTitle nav-link justify-content-start" href="foyer.html"><span class="fab fa-gripfire"></span>&nbsp; Le foyer</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
