First try Javascript

--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,8 @@
   <script src="./JavaScript/bootstrap.js"></script>
   <!-- Instafeed -->
   <script src='https://www.sociablekit.com/app/embed/instagram-feed/widget.js'></script>
+  <!-- JavaScript -->
+  <script src="./JavaScript/firstJavaScript.js"></script>
 
 </body>
 
