--- a/test.html
+++ b/test.html
@@ -61,7 +61,7 @@
   <!-- Bootstrap -->
   <script src="./JavaScript/bootstrap.js"></script>
   <!-- My javascript -->
-  <script src="firstJavaScript.js" type="text/javascript"></script>
+  <script src="./JavaScript/firstJavaScriptTest.js" type="text/javascript"></script>
 
 
 </body>
