--- a/otherPages/colorGame/index.html
+++ b/otherPages/colorGame/index.html
@@ -31,10 +31,10 @@
 
   <div class="navbar">
     <div class="container">
-      <button id="reset" type="button" name="button">NEW GAME</button>
+      <button id="reset" type="button" name="button">NEW COLORS</button>
       <span id="messageToPlayer"></span>
-      <button type="button" name="button">EASY</button>
-      <button type="button" name="button">HARD</button>
+      <button id="easyBTN" type="button" name="button">EASY</button>
+      <button id="hardBTN" type="button" name="button">HARD</button>
     </div>
   </div>
 
